--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,12 @@
 <navbar *ngIf="exibindoNavBar"></navbar>
 <router-outlet></router-outlet>
-<ng2-toasty></ng2-toasty>
+<p-growl></p-growl>
 <p-confirmDialog header="Confirmação" icon="pi pi-question-circle" #confirmacao>
   <p-footer>
     <button type="button" pButton icon="pi pi-check" label="Sim"
       (click)="confirmacao.accept()"></button>
     <button type="button" pButton icon="pi pi-times" label="Não"
+      class="ui-button-raised ui-button-danger"
       (click)="confirmacao.reject()"></button>
   </p-footer>
 </p-confirmDialog>
