--- a/src/app/modules/lancamentos/components/lancamento-cadastro/lancamento-cadastro.component.html
+++ b/src/app/modules/lancamentos/components/lancamento-cadastro/lancamento-cadastro.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <form  #f="ngForm" autocomplete="off" (ngSubmit)="salvar(f)">
+  <form autocomplete="off" (ngSubmit)="salvar()" [formGroup]="formulario">
 
     <div class="ui-g">
       <div class="ui-g-12">
@@ -7,66 +7,83 @@
       </div>
 
       <div class="ui-g-12">
-        <p-selectButton name="tipo" [options]="tipos"
-          [(ngModel)]="lancamento.tipo"
-          #tipo></p-selectButton>
+        <p-selectButton name="tipo" [options]="tipos" formControlName="tipo"></p-selectButton>
       </div>
 
       <div class="ui-g-6 ui-md-3 ui-fluid">
         <label>Vencimento</label>
         <p-calendar name="vencimento" dateFormat="dd/mm/yy"
-          #vencimento="ngModel" required [inline]="false" [readonlyInput]="true" [showIcon]="false"
-          [(ngModel)]="lancamento.dataVencimento"></p-calendar>
-        <message [control]="vencimento" error="required" severity="error" text="Informe uma data de vencimento"></message>
+         [inline]="false" [readonlyInput]="true" [showIcon]="false"
+         formControlName="dataVencimento"></p-calendar>
+        <message [control]="formulario.get('dataVencimento')" error="required" severity="error" text="Informe uma data de vencimento"></message>
       </div>
 
       <div class="ui-g-6 ui-md-3 ui-fluid">
-        <label>{{ tipo.value === 'RECEITA' ? 'Recebimento' : 'Pagamento'}}</label>
+        <label>{{ formulario.get('tipo').value === 'RECEITA' ? 'Recebimento' : 'Pagamento'}}</label>
         <p-calendar dateFormat="dd/mm/yy" name="dataPagamento"
-        [(ngModel)]="lancamento.dataPagamento"></p-calendar>
+        formControlName="dataPagamento"></p-calendar>
       </div>
 
       <div class="ui-g-12 ui-md-9 ui-fluid">
         <label>Descrição</label>
-        <input type="text" pInputText name="descricao"
-          [(ngModel)]="lancamento.descricao"
-          #descricao="ngModel" required minlength="5">
-        <message [control]="descricao" error="required" severity="error" text="Informe uma descrição"></message>
-        <message [control]="descricao" error="minlength" severity="error" text="Mínimo de {{ descricao.errors?.minlength?.requiredLength }} caracteres."></message>
+        <input type="text" pInputText name="descricao" formControlName="descricao">
+        <message [control]="formulario.get('descricao')" error="obrigatoriedade" severity="error" text="Informe uma descrição"></message>
+        <message [control]="formulario.get('descricao')" error="tamanhoMinimo" severity="error" text="Mínimo de {{ formulario.get('descricao').errors?.tamanhoMinimo?.tamanho }} caracteres."></message>
       </div>
 
       <div class="ui-g-12 ui-md-3 ui-fluid">
         <label>Valor</label>
         <input pInputText type="text" name="valor" placeholder="0,00"
           currencyMask [options]="{ prefix: '', thousands: '.', decimal: ',', allowNegative: false }"
-          [(ngModel)]="lancamento.valor"
-          required>
+          formControlName="valor">
       </div>
 
-      <div class="ui-g-12 ui-md-6 ui-fluid">
+      <div class="ui-g-12 ui-md-6 ui-fluid" formGroupName="categoria">
         <label>Categoria</label>
         <p-dropdown name="categorias" [options]="categorias" placeholder="Selecione" [autoWidth]="false"
-          [(ngModel)]="lancamento.categoria.codigo"
-          required></p-dropdown>
+        formControlName="codigo"></p-dropdown>
       </div>
 
-      <div class="ui-g-12 ui-md-6 ui-fluid">
+      <div class="ui-g-12 ui-md-6 ui-fluid" formGroupName="pessoa">
         <label>Pessoa</label>
         <p-dropdown name="pessoa" [options]="pessoas" placeholder="Selecione" [autoWidth]="false" [filter]="true"
-          [(ngModel)]="lancamento.pessoa.codigo"
-          required></p-dropdown>
+          formControlName="codigo"></p-dropdown>
       </div>
 
       <div class="ui-g-12 ui-fluid">
         <label>Observação</label>
         <textarea type="text" pInputTextarea rows="3" name="observacao"
-        [(ngModel)]="lancamento.observacao"></textarea>
+         formControlName="observacao"></textarea>
+      </div>
+
+      <div class="ui-g-6 ui-g-offset-6 ui-md-2 ui-md-offset-10 ui-fluid" *ngIf="!formulario.get('anexo').value">
+        <p-fileUpload name="anexo" mode="basic" auto="true" maxFileSize="100000000" 
+          chooseLabel="Anexar" accept="image/*,application/*"
+          [url]="urlUploadAnexo"
+          (onBeforeSend)="antesUploadAnexo($event)"
+          (onUpload)="aoTerminarUploadAnexo($event)"
+          (onError)="erroUpload($event)"
+          [hidden]="uploadEmAndamento"></p-fileUpload> 
+
+        <p-progressSpinner  [hidden]="!uploadEmAndamento"
+         [style]="{ width: '25px', height: '25px' }"></p-progressSpinner>
+      </div>
+      
+      <div class="ui-g-12" dir="rtl" *ngIf="formulario.get('anexo').value">
+
+        <button pButton icon="pi pi-times"  pTooltip="Remover anexo" tooltipPosition="top" 
+          style="width: 2em" class="ui-button-raised ui-button-danger"
+          (click)="removerAnexo()"></button>
+
+        <a target="_blank" pTooltip="Baixar anexo" tooltipPosition="top" style="margin-right: 5px;" 
+          [href]="formulario.get('urlAnexo').value">{{ nomeAnexo }}</a>
       </div>
 
       <div class="ui-g-12">
-        <button label="Salvar" type="submit" pButton class="ui-button-success" style="margin-right: 3px;" [disabled]="f.invalid"></button>
+        <button label="Salvar" type="submit" pButton class="ui-button-success" style="margin-right: 3px;" 
+          [disabled]="formulario.invalid || uploadEmAndamento"></button>
         <button label="Novo" type="submit" pButton  class="ui-button-info" style="margin-right: 5px;"
-          (click)="novo(f)"></button>
+          (click)="novo()"></button>
         <a routerLink="/lancamentos">Voltar para a pesquisa</a>
       </div>
 
