--- a/src/app/modules/pessoas/components/pessoa-cadastro/pessoa-cadastro.component.html
+++ b/src/app/modules/pessoas/components/pessoa-cadastro/pessoa-cadastro.component.html
@@ -49,15 +49,33 @@
       </div>
 
       <div class="ui-g-12 ui-md-6 ui-fluid">
-        <label>Cidade</label>
-        <input type="text" [(ngModel)]="impl.pessoa.endereco.cidade" pInputText name="cidade" #cidade="ngModel" required>
-        <message [control]="cidade" error="required" severity="error" text="Informe a cidade"></message>
+        <label>Estado</label>
+
+        <p-dropdown placeholder="Selecione..." [autoWidth]="false" [filter]="true"
+          [options]="impl.estados"
+          [(ngModel)]="impl.estadoSelecionado" name="estadoSelecionado"
+          (onChange)="carregarCidades()"
+          #estado="ngModel" required></p-dropdown>
+
+        <message [control]="estado" error="required" severity="error" text="Informe o estado"></message>
       </div>
 
       <div class="ui-g-12 ui-md-6 ui-fluid">
-        <label>Estado</label>
-        <input type="text" [(ngModel)]="impl.pessoa.endereco.estado" pInputText name="estado" #estado="ngModel" required>
-        <message [control]="estado" error="required" severity="error" text="Informe o estado"></message>
+        <label>Cidade</label>
+
+        <p-dropdown placeholder="Selecione..." [autoWidth]="false" [filter]="true"
+          [(ngModel)]="impl.pessoa.endereco.cidade.codigo" name="cidade"
+          [options]="impl.cidades"
+          #cidade="ngModel" required
+          [disabled]="!impl.estadoSelecionado"></p-dropdown>
+
+        <message [control]="cidade" error="required" severity="error" text="Informe a cidade"></message>
+      </div>
+
+      <div class="ui-g-12">
+        <p-panel header="Contatos">
+          <pessoa-cadastro-contato [contatos]="impl.pessoa.contatos"></pessoa-cadastro-contato>
+        </p-panel>
       </div>
 
       <div class="ui-g-12">
@@ -71,3 +89,4 @@
 
   </form>
 </div>
+
